# Main_Nitrogen_Valve_Log_App

./: .gitignore  AGENTS.md  README.md  package.json
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: commands.rs  lib.rs  main.rs  migrations.rs  model.rs  shared_sync.rs  shared_watcher.rs  valve_log.rs
docs/: AGENT_CHANGELOG.md  ARCHITECTURE.md  MANUAL_CLOSE_VALVE_LOGGING_PLAN.md  PROJECT_STRUCTURE.md
frontend/: index.html  vite.config.ts
frontend/src/app/: App.tsx  index.css
frontend/src/features/valve-panel/: UpdateActionButton.tsx  ValvePanel.tsx  operatorNames.ts  stateStyles.ts  updateTypes.ts  useDesktopUpdates.ts
frontend/src/integrations/tauri/: valveLog.ts
release/v0.1.0/: SHA256SUMS.txt  Valve.Log_0.1.0_x64-setup.exe.sig  latest.json
release/v0.1.1/: SHA256SUMS.txt  Valve.Log_0.1.1_x64-setup.exe.sig  latest.json
release/v0.1.2/: SHA256SUMS.txt  Valve.Log_0.1.2_x64-setup.exe.sig  latest.json
release/v0.1.3/: SHA256SUMS.txt  Valve.Log_0.1.3_x64-setup.exe.sig  latest.json
release/v0.1.4/: SHA256SUMS.txt  Valve Log_0.1.4_x64-setup.exe.sig  latest.json
release/v0.1.5/: SHA256SUMS.txt  Valve Log_0.1.5_x64-setup.exe.sig  latest.json
release/v0.1.6/: SHA256SUMS.txt  Valve.Log_0.1.6_x64-setup.exe.sig  latest.json
release/v0.1.7/: SHA256SUMS.txt  Valve Log_0.1.7_x64-setup.exe.sig  latest.json
release/v0.1.8/: SHA256SUMS.txt
